<resources>
    <string name="app_name">News App</string>
    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="sports">Sports</string>
    <string name="health">Health</string>
    <string name="science">Science</string>
    <string name="business">Business</string>
    <string name="technology">Technology</string>
    <string name="entertainment">Entertainment</string>
    <string name="language">Language :</string>
    <string name="categories">Categories</string>
    <string name="settings">Settings</string>
    <string name="Sports">Sports</string>

    <string-array name="spinner_items">
        <item>Language</item>
        <item>English</item>
        <item>Arabic</item>

    </string-array>
</resources>