<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.home.Categories"
    android:background="@drawable/back_ground"
    android:layout_margin="10dp"
    >
<View
    android:id="@+id/vertical_view"
    android:layout_width="1dp"
    android:layout_height="match_parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"

    />

    <ImageView
        android:id="@+id/sports_img"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="16dp"
        android:adjustViewBounds="true"
        android:src="@drawable/sports_img"
        app:layout_constraintEnd_toStartOf="@id/vertical_view"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@id/sports_img"
        app:layout_constraintStart_toStartOf="@id/sports_img"
        app:layout_constraintEnd_toEndOf="@id/sports_img"
        android:text="@string/sports"
        style="@style/categories_name"
        />

    <ImageView
        android:id="@+id/health_img"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/sports_img"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/vertical_view"
        android:adjustViewBounds="true"
        android:src="@drawable/health_img"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="20dp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@id/health_img"
        app:layout_constraintStart_toStartOf="@id/health_img"
        app:layout_constraintEnd_toEndOf="@id/health_img"
        android:text="@string/health"
        style="@style/categories_name"
        />
    <ImageView
        android:id="@+id/entertainment_img"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/health_img"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/vertical_view"
        android:adjustViewBounds="true"
        android:src="@drawable/enviroment_img"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="20dp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@id/entertainment_img"
        app:layout_constraintStart_toStartOf="@id/entertainment_img"
        app:layout_constraintEnd_toEndOf="@id/entertainment_img"
        android:text="@string/entertainment"
        style="@style/categories_name"
        android:layout_margin="2dp"
        />

    <ImageView
        android:id="@+id/technology_img"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@id/vertical_view"
        app:layout_constraintEnd_toEndOf="parent"
        android:adjustViewBounds="true"
        android:src="@drawable/politics_img"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="20dp"
      />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@id/technology_img"
        app:layout_constraintStart_toStartOf="@id/technology_img"
        app:layout_constraintEnd_toEndOf="@id/technology_img"
        android:text="@string/technology"
        style="@style/categories_name"
        />
    <ImageView
        android:id="@+id/business_img"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/technology_img"
        app:layout_constraintStart_toEndOf="@id/vertical_view"
        app:layout_constraintEnd_toEndOf="parent"
        android:adjustViewBounds="true"
        android:src="@drawable/business_img"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="20dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@id/business_img"
        app:layout_constraintStart_toStartOf="@id/business_img"
        app:layout_constraintEnd_toEndOf="@id/business_img"
        android:text="@string/business"
        style="@style/categories_name"
        />
    <ImageView
        android:id="@+id/science_img"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/business_img"
        app:layout_constraintStart_toEndOf="@id/vertical_view"
        app:layout_constraintEnd_toEndOf="parent"
        android:adjustViewBounds="true"
        android:src="@drawable/science_img"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="20dp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@id/science_img"
        app:layout_constraintStart_toStartOf="@id/science_img"
        app:layout_constraintEnd_toEndOf="@id/science_img"
        android:text="@string/science"
        style="@style/categories_name"
        />

</androidx.constraintlayout.widget.ConstraintLayout>